# binvec

./: .SRCINFO  .gitignore  .releaserc  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  binvec_update.json  build.rs  flatpak.yml  package-lock.json  package.json  test.sh
.desktop/: binvec.desktop
.github/updater/: binvec_update.json  build_update_json.sh
.github/workflows/: pipe.yaml
resources/: resources.gresource.xml  window.ui
src/: gtk_window.rs  image_processor.rs  main.rs  updater.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: image_processor.rs  image_processor_test.rs  main.rs
ui/: custom.css  index.html  script.js
