[package]
name = "app"
version = "1.0.0"
description = ""
authors = ["Rouven Himmelstein"]
license = ""
repository = ""
default-run = "app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0" # For json serialization
serde = { version = "1.0", features = ["derive"] } # For serialization
tauri = { version = "1.0", features = ["dialog-open", "fs-read-file", "fs-write-file"] } # As UI framework
image = "0.24" # Image lib, here used for binarizing and scaling images
vtracer = { git = "https://github.com/RouHim/vtracer" } # Generates vector images from raster images
visioncortex = "0.6.1" # Helper library for vtracer, this is the only compatible version with vtracer

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Strip debug symbols
